--- a/static/css/project.css
+++ b/static/css/project.css
@@ -4,6 +4,8 @@
     margin: 4px;
     border-radius: 4px;
     color: #fff;
+    background-color: #70B0E2;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
     font-size: 14px;
     font-weight: bold;
     text-align: center;
@@ -105,10 +107,9 @@
 }
 
 .summary{
-    padding: 40px;
-    padding-right: 150px;
+    padding: 4%;
+    padding-right: 13%;
     border-spacing: 5pt;
     border: black solid 2px;
     border-radius: 10pt;
 }
-
