--- a/templates/pages/cloud_compute.html
+++ b/templates/pages/cloud_compute.html
@@ -10,11 +10,17 @@
     <!-- Favicon -->
     <link rel="icon" href="/christopher.github.io/static/images/favicon.jpg">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/christopher.github.io/static/css/main.css">
@@ -47,11 +53,11 @@
                         <a class="nav-link" href="index.html#exp">Professional Experience</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button">
+                        <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             SWE Work
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="index.html#frontend">Frontend Work</a>
+                            <a class="dropdown-item" href="index.html#frontend" >Frontend Work</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="index.html#backend">Backend Work</a>
                             <div class="dropdown-divider"></div>
@@ -61,7 +67,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="index.html#ml" id="navbarDropdown" role="button">
+                        <a class="nav-link dropdown-toggle" href="index.html#swe" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             ML Work
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -87,19 +93,11 @@
                         <a class="nav-link" href="index.html#contact">Contact Me</a>
                     </li>
                 </ul>
-                <!--form class="d-flex" action="/christopher.github.io/templates/results.html" method="GET" id="searchForm">
-                    <label for="SearchInput"></label>
-                    <input id = "SearchInput" class="form-control me-2" type="search" name="query" placeholder="Search Tags" aria-label="Search">
-                    <button class="btn btn-outline-info" type="submit">Search</button>                 
-                </form-->
-                <div id="searchResults"></div>
-
-                <script src="static/js/search.js"></script>
             </div>
         </div>
     </nav>
 
-    <div class="container-fluid dkgray-base">    
+    <div class=" dkgray-base">    
         <div id="scenery-container">
             <div id="scenery"></div>
         </div>
@@ -112,98 +110,102 @@
     <div class="summary">
         <h1>NFL Cloud Native Application</h1>
         <h3>Completion: December 2023</h3>
-        <p>As part of a graduate level cloud computing course project at Columbia, I led a team of seven students to successfully deploy an end-to-end cloud application tailored for NFL fans. <br> As team lead, I collaborated with and encouraged team members to focus on different cloud technologies that best suited their programming backgrounds, which allowed for a deep understanding and ownership of each component. <br> To alleviate some team challenges that arose with the learning curve of new technologies and busy school schedules, I facilitated weekly meetings to synchronize our progress, and created a Slack channel to share helpful tutorials and design patterns. <br>This collaboration was crucial when a team member using Google Cloud faced significant obstacles, potentially delaying our project. Leveraging the skillsets I developed in AWS that semester, I was able to provide guidance and additional support to overcome these issues in Google Cloud and ensure a timely project completion.</p>
+        <p>Application Features: <br>&nbsp 1. NFL searching: fans can find information (eg. player stats, player basic information.) in HTML format or JSON format regarding their favorite players. The microservice also has operations to add/modify/delete players. <br><br> &nbsp 2. Team management: management personnel with different clearance levels can modify and query team/player information to keep fans updated. <br><br> &nbsp 3. Fan post-game reviews forum: fans can share insights and comments on games. <br><br>As part of a graduate level cloud computing course project at Columbia, I led a team of seven students to successfully deploy an end-to-end cloud application tailored for NFL fans. <br> As team lead, I collaborated with and encouraged team members to focus on different cloud technologies that best suited their programming backgrounds, which allowed for a deep understanding and ownership of each component. <br> To alleviate some team challenges that arose with the learning curve of new technologies and busy school schedules, I facilitated weekly meetings to synchronize our progress, and created a Slack channel to share helpful tutorials and design patterns. <br>This collaboration was crucial when a team member using Google Cloud faced significant obstacles, potentially delaying our project. Leveraging the skillsets I developed in AWS that semester, I was able to provide guidance and additional support to overcome these issues in Google Cloud and ensure a timely project completion.</p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #306998;">
+            <span class="tag">
                 Python
             </span>
             
-            <span class="tag" style="background-color: #FF8C00;">
+            <span class="tag">
                 Backend
             </span>
             
-            <span class="tag" style="background-color: #FFD700;">
+            <span class="tag">
                 Database
             </span>
             
-            <span class="tag" style="background-color: #5A6978;">
+            <span class="tag">
                 Full Stack
             </span>
             
-            <span class="tag" style="background-color: #FF9900;">
+            <span class="tag">
                 AWS
             </span>
             
-            <span class="tag" style="background-color: #EA4335;">
+            <span class="tag">
                 GCP
             </span>
             
-            <span class="tag" style="background-color: #4285F4;">
+            <span class="tag">
                 App-Engine
             </span>
             
-            <span class="tag" style="background-color: #FF9900;">
+            <span class="tag">
                 Lambda
             </span>
             
-            <span class="tag" style="background-color: #569A31;">
+            <span class="tag">
                 S3
             </span>
             
-            <span class="tag" style="background-color: #E34F26;">
+            <span class="tag">
                 Agile
             </span>
             
-            <span class="tag" style="background-color: #00D1FF;">
+            <span class="tag">
                 FAST API
             </span>
             
-            <span class="tag" style="background-color: #F7931E;">
+            <span class="tag">
                 Microservices
             </span>
             
-            <span class="tag" style="background-color: #F05032;">
+            <span class="tag">
                 Git
             </span>
             
-            <span class="tag" style="background-color: #66DAD7;">
+            <span class="tag">
                 Cloud
             </span>
             
-            <span class="tag" style="background-color: #8A2BE2;">
+            <span class="tag">
                 Middleware
             </span>
             
-            <span class="tag" style="background-color: #67C4D8;">
+            <span class="tag">
                 Rest API
             </span>
             
-            <span class="tag" style="background-color: #000000;">
+            <span class="tag">
                 Flask
             </span>
             
-            <span class="tag" style="background-color: #787878;">
+            <span class="tag">
                 Flask-alqemy
             </span>
             
-            <span class="tag" style="background-color: #0DB7ED;">
+            <span class="tag">
                 Docker
             </span>
             
-            <span class="tag" style="background-color: #4B0082;">
+            <span class="tag">
                 IaaS
             </span>
             
-            <span class="tag" style="background-color: #FF6347;">
+            <span class="tag">
                 Data-visualization
             </span>
             
-            <span class="tag" style="background-color: #4CAF50;">
+            <span class="tag">
+                Deployed
+            </span>
+            
+            <span class="tag">
                 Teamwork
             </span>
             
-            <span class="tag" style="background-color: #C4D8E2;">
+            <span class="tag">
                 Columbia
             </span>
             
@@ -230,9 +232,6 @@
         </section>
     </div>
 
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
     
 </body>
 </html>
