--- a/templates/project.html
+++ b/templates/project.html
@@ -16,7 +16,7 @@
         <p>{{ project.description }}</p>
         <p>Tags: 
             {% for tag in project.tags %}
-            <span class="tag" style="background-color: {{ tag_colors[tag] }};">
+            <span class="tag">
                 {{ tag }}
             </span>
             {% endfor %}
